@@ -1,5 +1,10 @@
 2008-05-08  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem.c (on_got_redirect): Fix build against totem-pl-parser
+	trunk
+
+2008-05-08  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/totemBasicPlugin.cpp: Add Totem specific
 	application/x-totem-plugin mime-type (Closes: #531734)
 
